# ai-news-curator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  scratch_ingest.py
.github/workflows/: lint.yml
src/: config.py  models.py  server.py
src/.github/workflows/: test.yml
src/fetchers/: base.py  content.py  hackernews.py
src/pipeline/: ingest.py
src/services/: news_service.py
src/storage/: chroma.py  sqlite.py
tests/: conftest.py  test_config.py  test_fetchers_base.py  test_fetchers_content.py  test_fetchers_hackernews.py  test_models.py  test_pipeline_ingest.py  test_server.py  test_services_news_service.py  test_storage_chroma.py  test_storage_sqlite.py
