[project]
name = "ai-news-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "chromadb>=1.5.8",
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
