[project]
name = "ai-news-curator"
version = "0.1.0"
description = "A news curator that uses AI to summarize and categorize news articles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
    "pytest-env>=1.6.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (common bugs and design issues)
    "UP",   # pyupgrade (modernize Python syntax)
    "N",    # pep8 naming conventions
    "ANN",  # type annotation enforcement
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN204",  # don't require return type for __init__
    "E501",    # line too long — ruff format handles this already
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]   # don't enforce type annotations in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-fail-under=100"
env = [
    "SQLITE_DB_PATH=./data/test.db",
    "CHROMA_DB_PATH=./data/test_chroma",
    "LOG_LEVEL=WARNING",
]
markers = [
    "integration: marks tests that call external APIs (deselect with '-m not integration')",
    "slow: marks tests that take more than a few seconds",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

